RESOLVED FIXED232563
GPU process WebKit logging is not initialised
https://bugs.webkit.org/show_bug.cgi?id=232563
Summary GPU process WebKit logging is not initialised
Kimmo Kinnunen
Reported 2021-11-01 06:25:40 PDT
GPU process WebKit logging is not initialised It initialises WebCore logging twice.
Attachments
Patch (1.71 KB, patch)
2021-11-01 06:30 PDT, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-11-01 06:30:56 PDT
EWS
Comment 2 2021-11-01 10:50:23 PDT
Committed r285116 (243757@main): <https://commits.webkit.org/243757@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 442973 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-01 10:51:27 PDT
Note You need to log in before you can comment on or make changes to this bug.