GPU process WebKit logging is not initialised https://bugs.webkit.org/show_bug.cgi?id=232563

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-11-01
Reviewed by Chris Dumez.

The file was not including LogInitialization.h.
"using namespace WebCore" caused
WebKit::logChannels() to mean WebCore::logChannels().

* GPUProcess/GPUProcess.cpp:
(WebKit::GPUProcess::initializeGPUProcess):


Canonical link: https://commits.webkit.org/243757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285116 268f45cc-cd09-0410-ab3c-d52691b4dbfc