Source/WebKit/GPUProcess/GPUProcess.cpp
@@ -38,7 +38,7 @@
 #include "GPUProcessCreationParameters.h"
 #include "GPUProcessProxyMessages.h"
 #include "GPUProcessSessionParameters.h"
-#include "Logging.h"
+#include "LogInitialization.h"
 #include "SandboxExtension.h"
 #include "WebPageProxyMessages.h"
 #include "WebProcessPoolMessages.h"
@@ -75,7 +75,6 @@
 #endif
 
 namespace WebKit {
-using namespace WebCore;
 
 // We wouldn't want the GPUProcess to repeatedly exit then relaunch when under memory pressure. In particular, we need to make sure the
 // WebProcess has a change to schedule work after the GPUProcess get launched. For this reason, we make sure that the GPUProcess never
